--- a/demo.tex
+++ b/demo.tex
@@ -26,4 +26,6 @@ Also notice how even though I hit enter after that sentence and here $\downarrow
 
 For a new essay I can leave a blank space in my code.
 
+I tested this out and after major inspection it runs well.
+and i thinks it works well
 \end{document} % This is the end of the document
